--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -1,7 +1,8 @@
 footer{
+   margin-top: 0px;
     background-color: rgb(58, 56, 56) ;
     height: 100px;
+    font-size: 50px;
     color: white;
     text-align: center;
-   
 }
