--- a/src/pages/about/about.css
+++ b/src/pages/about/about.css
@@ -1,5 +1,19 @@
-img{
+/* img{
     height: 500px;
     width: 100%;
     margin-top: 12px;
+} */
+
+
+.outlet{
+    background-color: rgb(170, 255, 0);
+    font-size: 30px;
+    height: 100vh;
+    display: flex;
+    width: 100%;
+    
+}
+
+.flexbox{
+    display: flex;
 }
