--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -1,5 +1,5 @@
 footer{
-   margin-top: 0px;
+   margin-top: auto;
     background-color: rgb(58, 56, 56) ;
     height: 100px;
     font-size: 50px;
