--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -20,3 +20,15 @@ border-radius: 50%;
 left: 800px;
 top: 40px;
 }
+.computer{
+    margin-top: 40px;
+    height: 300px;
+    width: 300px;
+    border-radius: 30px;
+}
+.main{
+    display: flex;
+    margin-left: 100px;
+    gap: 50px;
+ margin-bottom: 40px;   
+}
