--- a/src/components/Blog/blog.css
+++ b/src/components/Blog/blog.css
@@ -4,7 +4,7 @@
      margin-left: 450px;
      border: 2px solid rgb(221, 210, 210);
      width: 300px;
-     height:350px;
+     height:fit-content;
      padding: 20px;
      border-radius: 5px;
      font-size: 20px;
@@ -34,4 +34,9 @@
      }
 .coc{
      text-align: center;
+}
+.mistake{
+     color: red;
+     font-size: 12px;
+     display: flex;
 }
